--- a/dokumentaatio/site/xref/allclasses-frame.html
+++ b/dokumentaatio/site/xref/allclasses-frame.html
@@ -21,16 +21,22 @@
 				<a href="my/game/tetrisproject/logic/Game.html" target="classFrame">Game</a>
 			</li>
 						<li>
-				<a href="my/game/tetrisproject/logic/KeyListener.html" target="classFrame">KeyListener</a>
+				<a href="my/game/tetrisproject/gui/KeyboardListener.html" target="classFrame">KeyboardListener</a>
 			</li>
 						<li>
 				<a href="my/game/tetrisproject/Main.html" target="classFrame">Main</a>
 			</li>
 						<li>
-				<a href="my/game/tetrisproject/logic/Shape.html" target="classFrame">Shape</a>
+				<a href="my/game/tetrisproject/gui/TRenderer.html" target="classFrame">TRenderer</a>
 			</li>
 						<li>
-				<a href="my/game/tetrisproject/Tetris.html" target="classFrame">Tetris</a>
+				<a href="my/game/tetrisproject/domain/Tetromino.html" target="classFrame">Tetromino</a>
+			</li>
+						<li>
+				<a href="my/game/tetrisproject/gui/Ui.html" target="classFrame">Ui</a>
+			</li>
+						<li>
+				<a href="my/game/tetrisproject/gui/Updater.html" target="classFrame">Updater</a>
 			</li>
 			      </ul>
 
