--- a/dokumentaatio/site/xref/my/game/tetrisproject/domain/package-frame.html
+++ b/dokumentaatio/site/xref/my/game/tetrisproject/domain/package-frame.html
@@ -18,6 +18,9 @@
       		          	<li>
             	<a href="Block.html" target="classFrame">Block</a>
           	</li>
+          	          	<li>
+            	<a href="Tetromino.html" target="classFrame">Tetromino</a>
+          	</li>
           	      	</ul>
 
 	</body>
