--- a/dokumentaatio/site/xref/my/game/tetrisproject/domain/package-summary.html
+++ b/dokumentaatio/site/xref/my/game/tetrisproject/domain/package-summary.html
@@ -40,6 +40,11 @@
                 		<a href="Block.html" target="classFrame">Block</a>
               		</td>
             	</tr>
+				            	<tr>
+              		<td>
+                		<a href="Tetromino.html" target="classFrame">Tetromino</a>
+              		</td>
+            	</tr>
 				        	</tbody>
       	</table>
 		
