--- a/dokumentaatio/site/xref/overview-summary.html
+++ b/dokumentaatio/site/xref/overview-summary.html
@@ -45,6 +45,11 @@
             	</tr>
 	          	            	<tr>
               		<td>
+                		<a href="my/game/tetrisproject/gui/package-summary.html">my.game.tetrisproject.gui</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="my/game/tetrisproject/logic/package-summary.html">my.game.tetrisproject.logic</a>
               		</td>
             	</tr>
