--- a/dokumentaatio/site/xref/my/game/tetrisproject/gui/package-summary.html
+++ b/dokumentaatio/site/xref/my/game/tetrisproject/gui/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>TetrisProject 1.0-SNAPSHOT Reference Package my.game.tetrisproject.logic</title>
+		<title>TetrisProject 1.0-SNAPSHOT Reference Package my.game.tetrisproject.gui</title>
 		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package my.game.tetrisproject.logic</h2>
+		      	<h2>Package my.game.tetrisproject.gui</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,12 +37,22 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="Board.html" target="classFrame">Board</a>
+                		<a href="KeyboardListener.html" target="classFrame">KeyboardListener</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="Game.html" target="classFrame">Game</a>
+                		<a href="TRenderer.html" target="classFrame">TRenderer</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="Ui.html" target="classFrame">Ui</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="Updater.html" target="classFrame">Updater</a>
               		</td>
             	</tr>
 				        	</tbody>
