--- a/dokumentaatio/site/xref/overview-frame.html
+++ b/dokumentaatio/site/xref/overview-frame.html
@@ -22,6 +22,9 @@
 				<a href="my/game/tetrisproject/domain/package-frame.html" target="packageFrame">my.game.tetrisproject.domain</a>
 			</li>
 						<li>
+				<a href="my/game/tetrisproject/gui/package-frame.html" target="packageFrame">my.game.tetrisproject.gui</a>
+			</li>
+						<li>
 				<a href="my/game/tetrisproject/logic/package-frame.html" target="packageFrame">my.game.tetrisproject.logic</a>
 			</li>
 					</ul>
